# serializer version: 1
# name: TestConversionGoalProcessor.test_integration_actions_node_full_query_execution
  '''
  
  SELECT
      coalesce(events.properties.utm_campaign, 'Unknown Campaign') AS campaign,
      coalesce(events.properties.utm_source, 'Unknown Source') AS source,
      count('*') AS conversion_0
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 420), equals(event, 'sign_up'), greaterOrEquals(timestamp, toDate('2023-01-01')))
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
# name: TestConversionGoalProcessor.test_integration_events_node_full_query_execution
  '''
  
  SELECT
      coalesce(events.properties.utm_campaign, 'Unknown Campaign') AS campaign,
      coalesce(events.properties.utm_source, 'Unknown Source') AS source,
      count('*') AS conversion_0
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 420), equals(events.event, 'sign_up'), greaterOrEquals(timestamp, toDate('2023-01-01')))
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
# name: TestConversionGoalProcessor.test_integration_sum_math_full_query_execution
  '''
  
  SELECT
      coalesce(events.properties.utm_campaign, 'Unknown Campaign') AS campaign,
      coalesce(events.properties.utm_source, 'Unknown Source') AS source,
      round(sum(toFloat(JSONExtractRaw(events.properties, 'revenue'))), 2) AS conversion_0
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 420), equals(events.event, 'purchase'), greaterOrEquals(timestamp, toDate('2023-01-01')))
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
